@@ -1,1 +1,1 @@
-debian/tmp/usr/bin/*
+debian/tmp/usr/local/bin /usr
