@@ -1,5 +1,6 @@
 hildon-desktop (1:2.2.0-1~unreleased) unstable; urgency=low
 
   * Initial packaging.
+  * Pre-generated tidy-marshal.[ch] are used because of qemu problems.
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 14 Aug 2008 17:16:04 +0300
